--- a/index.html
+++ b/index.html
@@ -3,13 +3,83 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- Bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
+        <link rel="stylesheet" href="./css/main.css" />
+
         <title>C.T.I. | Inicio</title>
     </head>
     <body>
-        <header></header>
+        <header>
+            <nav class="navbar navbar-expand-lg bg-primary headerNavbar" id="headerNavbar">
+                <div class="container-fluid">
+                    <a class="navbar-brand logo" href="#">C.T.I.</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Cotizacion</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">FAQ</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Login</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
 
-        <main></main>
+        <main class="principal">
+            <fieldset>
+                <form class="principalForm">
+                    <legend><h1>Nueva cotizacion</h1></legend>
+                    <section class="operacion">
+                        <div>
+                            <label for="checkbox">Venta</label>
+                            <input type="checkbox" id="venta" />
+                        </div>
+                        <div>
+                            <label for="checkbox">Alquiler</label>
+                            <input type="checkbox" id="alquiler" />
+                        </div>
+                    </section>
+
+                    <section class="calculo">
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">M2</span>
+                            <input type="number" class="form-control" id="cantidadM2"">
+                        </div>
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">Valor del M2</span>
+                            <input type="number" class="form-control" id="valorM2"">
+                        </div>
+                        <button type="button" class="btn btn-primary btnPrincipal" onclick="cotizar()">Cotizar</button>
+                    </section>
+
+                    <section class="resultados">
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">Cotizacion</span>
+                            <input type="number" class="form-control" id="cantidadUSD" disabled />
+                        </div>
+                        <button type="button" class="btn btn-success btnPrincipal" onclick="guardar()">Guardar Cotizacion</button>
+                        <button type="button" class="btn btn-danger btnPrincipal" onclick="eliminar()">Borrar Datos</button>
+                    </section>
+                </form>
+            </fieldset>
+        </main>
 
         <footer></footer>
+        <!-- Bootstrap -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+
+        <script src="./main.js"></script>
     </body>
 </html>
