Correcciones del primer prototipo

--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                             <span class="input-group-text">Valor del M2</span>
                             <input type="number" class="form-control" id="valorM2"">
                         </div>
-                        <button type="button" class="btn btn-primary btnPrincipal" onclick="cotizar()">Cotizar</button>
+                        <button type="button" class="btn btn-primary btnPrincipal" onclick="validar()">Cotizar</button>
                     </section>
 
                     <section class="resultados">
                         <div class="input-group mb-3">
                             <span class="input-group-text">Cotizacion</span>
-                            <input type="number" class="form-control" id="cantidadUSD" disabled />
+                            <input type="number" class="form-control" id="valorFinal" disabled />
                         </div>
                         <button type="button" class="btn btn-success btnPrincipal" onclick="guardar()">Guardar Cotizacion</button>
                         <button type="button" class="btn btn-danger btnPrincipal" onclick="eliminar()">Borrar Datos</button>
