Agrego funcion busqueda de propiedad de mayor valor

--- a/index.html
+++ b/index.html
@@ -222,6 +222,10 @@
                     <h1>Mis Propiedades</h1>
                 </article>
 
+                <article class="misPropsBuscador">
+                    <button type="button" class="btn btn-primary" id="btnMayorValor" disabled>Propiedad de mayor valor</button>
+                </article>
+
                 <article class="misPropsTable">
                     <table class="table table-striped">
                         <thead>
