--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!-- Bootstrap -->
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
         <link rel="stylesheet" href="./css/main.css" />
 
@@ -23,7 +23,7 @@
                                 <a class="nav-link" aria-current="page" href="#nombreProp">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#misPropiedades">Mis Propiedades</a>
+                                <a class="nav-link" href="./pages/props.html">Mis Propiedades</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Login</a>
@@ -216,36 +216,9 @@
                     </section>
                 </form>
             </fieldset>
-
-            <section class="misProps">
-                <article class="misPropsTitle">
-                    <h1>Mis Propiedades</h1>
-                </article>
-
-                <article class="misPropsBuscador">
-                    <button type="button" class="btn btn-primary" id="btnMayorValor" disabled>Propiedad de mayor valor</button>
-                </article>
-
-                <article class="misPropsTable">
-                    <table class="table table-striped">
-                        <thead>
-                            <tr>
-                                <th scope="col">Nombre</th>
-                                <th scope="col">Direccion</th>
-                                <th scope="col">M²</th>
-                                <th scope="col">Valor</th>
-                            </tr>
-                        </thead>
-                        <tbody id="misPropiedades"></tbody>
-                    </table>
-                </article>
-            </section>
         </main>
 
-        <footer></footer>
-        <!-- Bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-
-        <script src="./main.js"></script>
+        <script src="./js/main.js"></script>
     </body>
 </html>
