Creacion de buscador de propiedades

--- a/pages/props.html
+++ b/pages/props.html
@@ -37,6 +37,10 @@
         <main>
             <div class="misPropsTitle">
                 <h1>Propiedades</h1>
+                <div class="form-floating mb-3 w">
+                    <input type="text" class="form-control" id="buscarProp" placeholder="propiedad" />
+                    <label>Buscar propiedad</label>
+                </div>
             </div>
 
             <section id="propsView" class="propsView"></section>
