--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <header>
             <nav class="navbar navbar-expand-lg bg-primary headerNavbar" id="headerNavbar">
                 <div class="container-fluid bg-primary">
-                    <a class="navbar-brand logo" href="#">C.T.I.</a>
+                    <a class="navbar-brand logo" href="./index.html">C.T.I.</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav navbarBtns">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="#nombreProp">Inicio</a>
+                                <a class="nav-link" aria-current="page" href="./index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./pages/props.html">Mis Propiedades</a>
