--- a/pages/props.html
+++ b/pages/props.html
@@ -23,7 +23,7 @@
                                 <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Mis Propiedades</a>
+                                <a class="nav-link" href="./props.html">Mis Propiedades</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Login</a>
