--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <article class="localidadProp">
                             <div class="form-floating">
                                 <select class="form-select" id="barrioProp">
-                                    <option value="Agronomía">Agronomía</option>
+                                    <option value="Agronomia">Agronomia</option>
                                     <option value="Almagro">Almagro</option>
                                     <option value="Balvanera">Balvanera</option>
                                     <option value="Barracas">Barracas</option>
@@ -77,7 +77,7 @@
                                     <option value="Chacarita">Chacarita</option>
                                     <option value="Coghlan">Coghlan</option>
                                     <option value="Colegiales">Colegiales</option>
-                                    <option value="Constitución">Constitución</option>
+                                    <option value="Constitucion">Constitucion</option>
                                     <option value="Flores">Flores</option>
                                     <option value="Floresta">Floresta</option>
                                     <option value="La Boca">La Boca</option>
@@ -87,7 +87,7 @@
                                     <option value="Monserrat">Monserrat</option>
                                     <option value="Monte Castro">Monte Castro</option>
                                     <option value="Nueva Pompeya">Nueva Pompeya</option>
-                                    <option value="Núñez">Núñez</option>
+                                    <option value="Nunez">Nuñez</option>
                                     <option value="Palermo">Palermo</option>
                                     <option value="Parque Avellaneda">Parque Avellaneda</option>
                                     <option value="Parque Chacabuco">Parque Chacabuco</option>
@@ -97,10 +97,10 @@
                                     <option value="Recoleta">Recoleta</option>
                                     <option value="Retiro">Retiro</option>
                                     <option value="Saavedra">Saavedra</option>
-                                    <option value="San Cristóbal">San Cristóbal</option>
-                                    <option value="San Nicolás">San Nicolás</option>
+                                    <option value="San Cristobal">San Cristobal</option>
+                                    <option value="San Nicolas">San Nicolas</option>
                                     <option value="San Telmo">San Telmo</option>
-                                    <option value="Vélez Sársfield">Vélez Sársfield</option>
+                                    <option value="Velez Sarsfield">Velez Sarsfield</option>
                                     <option value="Versalles">Versalles</option>
                                     <option value="Villa Crespo">Villa Crespo</option>
                                     <option value="Villa del Parque">Villa del Parque</option>
@@ -108,8 +108,8 @@
                                     <option value="Villa General Mitre">Villa General Mitre</option>
                                     <option value="Villa Lugano">Villa Lugano</option>
                                     <option value="Villa Luro">Villa Luro</option>
-                                    <option value="Villa Ortúzar">Villa Ortúzar</option>
-                                    <option value="Villa Pueyrredón">Villa Pueyrredón</option>
+                                    <option value="Villa Ortzar">Villa Ortzar</option>
+                                    <option value="Villa Pueyrredon">Villa Pueyrredon</option>
                                     <option value="Villa Real">Villa Real</option>
                                     <option value="Villa Riachuelo">Villa Riachuelo</option>
                                     <option value="Villa Santa Rita">Villa Santa Rita</option>
