--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                                 <a class="nav-link" href="./pages/props.html">Mis Propiedades</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Login</a>
+                                <a class="nav-link" href="./pages/login.html">Login</a>
                             </li>
                         </ul>
                     </div>
