--- a/pages/login.html
+++ b/pages/login.html
@@ -4,10 +4,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
         <link rel="stylesheet" href="../css/main.css" />
 
-        <title>C.T.I. | Mis Propiedades</title>
+        <title>C.T.I. | Login</title>
     </head>
     <body>
         <header>
@@ -35,18 +36,24 @@
         </header>
 
         <main>
-            <div class="misPropsTitle">
-                <h1>Propiedades</h1>
-                <div class="form-floating mb-3 w">
-                    <input type="text" class="form-control" id="buscarProp" placeholder="propiedad" />
-                    <label>Buscar propiedad</label>
+            <form id="loginForm">
+                <div class="mb-3">
+                    <label for="usuario" class="form-label">Usuario</label>
+                    <input type="text" class="form-control" id="user" aria-describedby="user" />
                 </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Contraseña</label>
+                    <input type="password" class="form-control" id="password" />
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+            <div>
+                <a href="#">¿No tenes una cuenta? Registrate aqui</a>
             </div>
-
-            <section id="propsView" class="propsView"></section>
         </main>
     </body>
 
+    <script src="../js/login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    <script src="../js/props.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </html>
