Finalizo prototipo de inicio de sesion. Posible para un solo usuario

--- a/pages/login.html
+++ b/pages/login.html
@@ -35,7 +35,7 @@
             </nav>
         </header>
 
-        <main>
+        <main class="mainLogin" id="mainLogin">
             <form id="loginForm">
                 <div class="mb-3">
                     <label for="usuario" class="form-label">Usuario</label>
