--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                                 <a class="nav-link" href="./pages/props.html">Mis Propiedades</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./pages/login.html">Login</a>
+                                <a class="nav-link" id="userName" href="./pages/login.html">Login</a>
                             </li>
                         </ul>
                     </div>
@@ -220,6 +220,7 @@
         </main>
 
         <script src="./js/main.js"></script>
+        <script src="./js/login.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
