--- a/pages/props.html
+++ b/pages/props.html
@@ -26,7 +26,7 @@
                                 <a class="nav-link" href="./props.html">Mis Propiedades</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./login.html">Login</a>
+                                <a class="nav-link" id="userName" href="./login.html">Login</a>
                             </li>
                         </ul>
                     </div>
@@ -47,6 +47,7 @@
         </main>
     </body>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="../js/props.js"></script>
+    <script src="../js/login.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </html>
