Agregado de pagina 404. Agregado de varias opciones de usuarios. Correccion de detalles

--- a/pages/login.html
+++ b/pages/login.html
@@ -48,7 +48,7 @@
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
             <div>
-                <a href="#">¿No tenes una cuenta? Registrate aqui</a>
+                <a href="../404.html">¿No tenes una cuenta? Registrate aqui</a>
             </div>
         </main>
     </body>
