--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </nav>
         </header>
 
-        <main class="principal">
+        <main class="principal" id="principal">
             <fieldset>
                 <form class="principalForm">
                     <section class="datosProp">
@@ -219,9 +219,9 @@
             </fieldset>
         </main>
 
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script src="./js/main.js"></script>
         <script src="./js/login.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     </body>
