--- a/pages/props.html
+++ b/pages/props.html
@@ -34,7 +34,7 @@
             </nav>
         </header>
 
-        <main>
+        <main id="mainProps">
             <div class="misPropsTitle">
                 <h1>Propiedades</h1>
                 <div class="form-floating mb-3 w">
@@ -47,8 +47,8 @@
         </main>
     </body>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../js/props.js"></script>
     <script src="../js/login.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </html>
